# regionpolicyevaluator-skeleton

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/bindings/: Cargo.toml  build.rs  midlrt.rsp  riddle.rsp
crates/bindings/src/: bindings.rs  lib.rs
crates/bindings/winmd/: W.I.S.P.RegionPolicyEvaluator.idl
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/component/: Cargo.toml
crates/component/src/: lib.rs
scripts/: Install.ps1  Uninstall.ps1
