[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies.bindings]
path = "../bindings"

[dependencies.windows]
git = "https://github.com/riverar/windows-rs"
branch = "rafael/0.52_partialtrust"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
]
