[package]
name = "component"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.bindings]
path = "../bindings"

[dependencies.windows-core]
version = "0.52.0"
features = [
    "implement",
]

[dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
]
