[package]
name = "component"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.bindings]
path = "../bindings"

[dependencies.windows-core]
git = "https://github.com/riverar/windows-rs"
branch = "rafael/0.52_partialtrust"
features = [
    "implement",
]

[dependencies.windows]
git = "https://github.com/riverar/windows-rs"
branch = "rafael/0.52_partialtrust"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
]
