[package]
name = "component"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.bindings]
path = "../bindings"

[dependencies.windows-core]
git = "https://github.com/microsoft/windows-rs"
features = [
    "implement",
]

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
]
